src/test/deca/context/valid/print.deca
// Description:
//    print simple mais couvre pas mal de chose 
//
// Resultats:
//    
// 
// Historique:
//    cree le 07/01/2025

{
    println(3);
    println("3");
    println("3.0");
}
